--- a/app/src/main/res/layout/fragment_analyse.xml
+++ b/app/src/main/res/layout/fragment_analyse.xml
@@ -105,6 +105,15 @@
                 android:layout_marginTop="@dimen/material_generic"
                 />
             <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/cluttered_video_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/cluttered_videos"
+                app:hint="@string/cluttered_videos_hint"
+                app:showPreview="true"
+                android:layout_marginTop="@dimen/material_generic"
+                />
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/large_download_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -131,14 +140,16 @@
                 android:layout_height="wrap_content"
                 app:analysisTitle="@string/empty_files"
                 android:layout_marginTop="@dimen/material_generic"
+                android:visibility="gone"
                 />
-            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+            <!--<com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/telegram_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:analysisTitle="@string/telegram_files"
                 android:layout_marginTop="@dimen/material_generic"
-                />
+                />-->
+            <!-- junk files files of uninstalled apps that aren't deleted -->
             <!--<com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/junk_files_preview"
                 android:layout_width="match_parent"
