Add repeat / shuffle in audio player; add group / sort by options; refactor code

--- a/app/src/main/res/layout/audio_player_notification.xml
+++ b/app/src/main/res/layout/audio_player_notification.xml
@@ -61,6 +61,18 @@
         android:layoutDirection="ltr"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/action_repeat"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_round_repeat_32"
+            android:gravity="center"
+            android:padding="8dp"
+            android:scaleType="fitCenter" />
+        <ImageView
             android:id="@+id/action_previous"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
@@ -95,6 +107,18 @@
             android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:background="@drawable/ic_round_skip_next_32"
+            android:gravity="center"
+            android:padding="8dp"
+            android:scaleType="fitCenter" />
+        <ImageView
+            android:id="@+id/action_shuffle"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_round_shuffle_32"
             android:gravity="center"
             android:padding="8dp"
             android:scaleType="fitCenter" />
