--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="highlight_yellow_trans">#33FFEB6B</color>
     <color name="navy_blue_translucent_30">#30FFFFFF</color>
     <color name="navy_blue_alt">#262a3e</color>
+    <color name="navy_blue_alt_3">#2E3242</color>
     <color name="navy_blue_alt_2">#FF3F51B5</color>
     <color name="pink">#bd5dfb</color>
     <color name="purple">#57489b</color>
