--- a/app/src/main/res/layout/audio_player_notification_big.xml
+++ b/app/src/main/res/layout/audio_player_notification_big.xml
@@ -64,6 +64,18 @@
         android:gravity="center_horizontal"
         >
         <ImageView
+            android:id="@+id/action_repeat"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_round_repeat_32"
+            android:gravity="center"
+            android:padding="8dp"
+            android:scaleType="fitCenter" />
+        <ImageView
             android:id="@+id/action_previous"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
@@ -71,7 +83,7 @@
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@drawable/ic_outline_fast_rewind_32"
+            android:background="@drawable/ic_round_skip_previous_32"
             android:gravity="center"
             android:padding="8dp"
             android:scaleType="fitCenter" />
@@ -95,7 +107,19 @@
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:background="@drawable/ic_outline_fast_forward_32"
+            android:background="@drawable/ic_round_skip_next_32"
+            android:gravity="center"
+            android:padding="8dp"
+            android:scaleType="fitCenter" />
+        <ImageView
+            android:id="@+id/action_shuffle"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_round_shuffle_32"
             android:gravity="center"
             android:padding="8dp"
             android:scaleType="fitCenter" />
