--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -253,11 +253,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
+                android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal"
                 android:layout_marginTop="@dimen/material_generic"
                 android:layout_marginBottom="@dimen/material_generic"
+                android:weightSum="1"
                 >
+                <ImageView
+                    android:id="@+id/repeatButton"
+                    android:layout_width="@dimen/minimal_icon_size_small"
+                    android:layout_height="@dimen/minimal_icon_size_small"
+                    app:srcCompat="@drawable/ic_round_repeat_32"
+                    android:layout_marginRight="@dimen/material_generic"
+                    android:layout_marginEnd="@dimen/material_generic"
+                    android:layout_weight="0.35"
+                    />
                 <ImageView
                     android:id="@+id/prevButton"
                     android:layout_width="@dimen/minimal_icon_size"
@@ -265,6 +275,7 @@
                     app:srcCompat="@drawable/ic_round_skip_previous_32"
                     android:layout_marginRight="@dimen/material_generic"
                     android:layout_marginEnd="@dimen/material_generic"
+                    android:layout_weight="0.10"
                     />
                 <ImageView
                     android:id="@+id/playButton"
@@ -273,12 +284,23 @@
                     android:layout_height="@dimen/minimal_icon_size"
                     android:layout_marginRight="@dimen/material_generic"
                     android:layout_marginEnd="@dimen/material_generic"
+                    android:layout_weight="0.10"
                     />
                 <ImageView
                     android:id="@+id/nextButton"
                     android:layout_width="@dimen/minimal_icon_size"
                     android:layout_height="@dimen/minimal_icon_size"
                     app:srcCompat="@drawable/ic_round_skip_next_32"
+                    android:layout_weight="0.10"
+                    />
+                <ImageView
+                    android:id="@+id/shuffleButton"
+                    android:layout_width="@dimen/minimal_icon_size_small"
+                    android:layout_height="@dimen/minimal_icon_size_small"
+                    app:srcCompat="@drawable/ic_round_shuffle_32"
+                    android:layout_marginRight="@dimen/material_generic"
+                    android:layout_marginEnd="@dimen/material_generic"
+                    android:layout_weight="0.35"
                     />
             </LinearLayout>
         </LinearLayout>
