Working on integration of cast

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,20 @@
             android:text="@string/about"
             android:gravity="center_vertical"
             />
+
+        <androidx.mediarouter.app.MediaRouteButton
+            android:id="@+id/media_route_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:visibility="gone"
+            android:layout_weight="1"
+            android:mediaRouteTypes="user"
+            android:layout_marginLeft="@dimen/eight_dp"
+            android:layout_marginStart="@dimen/eight_dp"
+            android:layout_marginRight="@dimen/material_generic"
+            android:layout_marginEnd="@dimen/material_generic"
+            />
     </LinearLayout>
 
     <View
