--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -113,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/six_dp"
-                    android:textSize="@dimen/eight_sp"
+                    android:textSize="@dimen/twelve_sp"
                     android:textColor="@color/white"
                     />
             </LinearLayout>
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textColor="@color/white"
-                android:textSize="@dimen/eight_sp"
+                android:textSize="@dimen/twelve_sp"
                 android:layout_marginRight="@dimen/material_generic"
                 android:layout_marginEnd="@dimen/material_generic"
                 android:gravity="center_vertical"
@@ -183,7 +183,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/six_dp"
-                android:textSize="@dimen/eight_sp"
+                android:textSize="@dimen/twelve_sp"
                 android:textColor="@color/grey_color"
                 android:singleLine="true"
                 />
@@ -208,7 +208,7 @@
                     android:id="@+id/time_elapsed"
                     android:layout_width="@dimen/zero_dp"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/eight_sp"
+                    android:textSize="@dimen/twelve_sp"
                     android:textColor="@color/grey_color"
                     android:layout_weight="0.1"
                     android:gravity="center_horizontal|center_vertical"
@@ -244,7 +244,7 @@
                     android:id="@+id/track_length"
                     android:layout_width="@dimen/zero_dp"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/eight_sp"
+                    android:textSize="@dimen/twelve_sp"
                     android:textColor="@color/grey_color"
                     android:layout_weight="0.1"
                     android:gravity="center_horizontal|center_vertical"
