--- a/app/src/main/res/layout/media_type_header_layout.xml
+++ b/app/src/main/res/layout/media_type_header_layout.xml
@@ -3,13 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/type_image"
-        android:layout_width="@dimen/fourty_eight_dp"
-        android:layout_height="@dimen/fourty_eight_dp"
+    <RelativeLayout
+        android:id="@+id/type_header_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="@dimen/material_generic_medium"
-        android:layout_gravity="center_horizontal"
-        />
+        >
+        <ImageView
+            android:id="@+id/type_image"
+            android:layout_width="@dimen/fourty_eight_dp"
+            android:layout_height="@dimen/fourty_eight_dp"
+            android:layout_centerHorizontal="true"
+            />
+        <androidx.mediarouter.app.MediaRouteButton
+            android:id="@+id/media_route_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:mediaRouteTypes="user"
+            android:layout_marginLeft="@dimen/eight_dp"
+            android:layout_marginStart="@dimen/eight_dp"
+            android:layout_marginRight="@dimen/material_generic"
+            android:layout_marginEnd="@dimen/material_generic"
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"
+            />
+    </RelativeLayout>
     <LinearLayout
         android:id="@+id/infoLayoutParent"
         android:layout_width="match_parent"
