--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -23,6 +23,28 @@
         android:visibility="gone"
         />
 
+    <TextView
+        android:id="@+id/device_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/searching"
+        android:textColor="@color/white"
+        android:textSize="@dimen/eight_sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        />
+
+    <TextView
+        android:id="@+id/device_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/searching"
+        android:textColor="@color/white"
+        android:textSize="@dimen/eight_sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        />
+
     <ProgressBar
         android:id="@+id/searching_progress"
         android:layout_width="match_parent"
@@ -53,7 +75,6 @@
             app:cornerRadius="@dimen/material_generic"
             app:rippleColor="@color/highlight_yellow"
             style="@style/MaterialButton.White"
-            android:visibility="gone"
             />
 
         <com.google.android.material.button.MaterialButton
