--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -75,6 +75,7 @@
             app:cornerRadius="@dimen/material_generic"
             app:rippleColor="@color/highlight_yellow"
             style="@style/MaterialButton.White"
+            android:visibility="gone"
             />
 
         <com.google.android.material.button.MaterialButton
@@ -87,19 +88,60 @@
             app:rippleColor="@color/highlight_yellow"
             app:elevation="@dimen/material_generic"
             style="@style/MaterialButton.White"
+            android:visibility="gone"
             />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/transfer_button"
+        android:id="@+id/scan_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_transfer"
+        android:text="@string/title_scan"
         android:layout_marginStart="@dimen/material_generic"
         app:cornerRadius="@dimen/material_generic"
         app:rippleColor="@color/highlight_yellow"
         app:elevation="@dimen/material_generic"
         style="@style/MaterialButton.White"
-        android:visibility="gone"
         />
+    <LinearLayout
+        android:id="@+id/transfer_info_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
+        <TextView
+            android:id="@+id/transfer_file_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/searching"
+            android:textColor="@color/white"
+            android:textSize="@dimen/twelve_sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:id="@+id/transfer_progress"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.8"
+                app:trackColor="@color/white_grey_1"
+                app:indicatorColor="@color/highlight_yellow"
+                app:trackCornerRadius="@dimen/two_dp"
+                app:indicatorDirectionLinear="leftToRight"
+                />
+            <ImageView
+                android:id="@+id/transfer_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_round_close_32"
+                android:layout_weight="0.2"
+                android:layout_marginLeft="@dimen/eight_dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
