--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -74,10 +74,13 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/send_receive_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_vertical|center_horizontal">
+        android:gravity="center_vertical|center_horizontal"
+        android:visibility="gone"
+        >
         <com.google.android.material.button.MaterialButton
             android:id="@+id/send_button"
             android:layout_width="wrap_content"
@@ -86,7 +89,6 @@
             app:cornerRadius="@dimen/material_generic"
             app:rippleColor="@color/highlight_yellow"
             style="@style/MaterialButton.White"
-            android:visibility="gone"
             />
 
         <com.google.android.material.button.MaterialButton
@@ -99,7 +101,6 @@
             app:rippleColor="@color/highlight_yellow"
             app:elevation="@dimen/material_generic"
             style="@style/MaterialButton.White"
-            android:visibility="gone"
             />
     </LinearLayout>
 
@@ -108,7 +109,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_scan"
-        android:layout_marginStart="@dimen/material_generic"
         app:cornerRadius="@dimen/material_generic"
         app:rippleColor="@color/highlight_yellow"
         app:elevation="@dimen/material_generic"
@@ -129,12 +129,13 @@
             android:textColor="@color/white"
             android:textSize="@dimen/twelve_sp"
             android:textStyle="bold"
-            android:visibility="gone"
             />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1"
+            >
             <com.google.android.material.progressindicator.LinearProgressIndicator
                 android:id="@+id/transfer_progress"
                 android:layout_width="@dimen/zero_dp"
@@ -147,7 +148,7 @@
                 />
             <ImageView
                 android:id="@+id/transfer_cancel"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/zero_dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_round_close_32"
                 android:layout_weight="0.2"
