--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -102,6 +102,18 @@
             app:elevation="@dimen/material_generic"
             style="@style/MaterialButton.White"
             />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/disconnect_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/disconnect"
+            android:layout_marginStart="@dimen/material_generic"
+            app:cornerRadius="@dimen/material_generic"
+            app:rippleColor="@color/highlight_yellow"
+            app:elevation="@dimen/material_generic"
+            style="@style/MaterialButton.White"
+            />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -113,6 +125,18 @@
         app:rippleColor="@color/highlight_yellow"
         app:elevation="@dimen/material_generic"
         style="@style/MaterialButton.White"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/stop_scan_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/title_stop_scan"
+        app:cornerRadius="@dimen/material_generic"
+        app:rippleColor="@color/highlight_yellow"
+        app:elevation="@dimen/material_generic"
+        style="@style/MaterialButton.White"
+        android:visibility="gone"
         />
     <LinearLayout
         android:id="@+id/transfer_info_parent"
@@ -129,6 +153,14 @@
             android:textColor="@color/white"
             android:textSize="@dimen/twelve_sp"
             android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/transfer_bytes_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/searching"
+            android:textColor="@color/white"
+            android:textSize="@dimen/twelve_sp"
             />
         <LinearLayout
             android:layout_width="match_parent"
