--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="material_generic_medium">32dp</dimen>
     <dimen name="sixty_four_dp">64dp</dimen>
     <dimen name="material_generic_large">72dp</dimen>
+    <dimen name="one_twenty_dp">120dp</dimen>
+    <dimen name="one_sixty_dp">160dp</dimen>
     <dimen name="material_sheet_peek_height">400dp</dimen>
     <dimen name="audio_player_sheet_height">500dp</dimen>
     <dimen name="files_tab_heights">180dp</dimen>
